objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Merchandise. This field is required.</description>
        <inlineHelpText>Use up to 255 characters.</inlineHelpText>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Toral_Inventory__c</fullName>
        <label>Toral Inventory</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>